style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  overflow: hidden;
}

.header {
  background: #f5f5f5;
  padding: 10px 40px;
}

/* NAVBAR */
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  display: flex;
  align-items: center;
  gap: 10px;
}

.logo img {
  height: 50px;
}

.logo-text h2 {
  margin: 0;
  font-size: 16px;
  line-height: 1.1;
  color: #1b5e20;
}

.logo-text span {
  font-size: 10px;
  letter-spacing: 1px;
  color: #1b5e20;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 25px;
  width: 100%;
  left: 0;
}

.nav-links li a {
  text-decoration: none;
  color: #333;
  font-weight: 500;
}

.nav-links .active {
  color: #18A6C4;
  border-bottom: 2px solid #18A6C4;
  padding-bottom: 5px;
}

.donate-btn {
  background: #18A6C4;
  color: white;
  padding: 10px 20px;
  border-radius: 25px;
  text-decoration: none;
  font-weight: bold;
}

.donate-btn:hover {
  background: #18A6C4;
}

/* HERO */
.hero {
  height: 65vh;
  background: url('images/picture1.jpeg') center/cover no-repeat;
  position: relative;
}

.hero-overlay {
  background: rgba(0, 0, 0, 0.6);
  height: 100%;
  display: flex;
  align-items: center;
  padding-left: 60px;
}

.hero-content {
  color: white;
  max-width: 600px;
}

.hero-content h1 {
  font-size: 48px;
  margin-bottom: 20px;
}

.hero-content p {
  font-size: 18px;
  margin-bottom: 25px;
}

.hero-buttons {
  display: flex;
  gap: 15px;
}

.btn-primary{
  background: #18A6C4;
  color: white;
  padding: 12px 25px;
  text-decoration: none;
  border-radius: 25px;
}

/* ABOUT */
.about {
  background: #f7f7f7;
  padding: 60px 40px;
}

.about-container {
  display: flex;
  gap: 40px;
  max-width: 1100px;
  margin: auto;
  align-items: center;
}

.about-text h5 {
  color: #1b5e20;
}

.about-text h2 {
  font-size: 32px;
}

.about-card {
  background: white;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 5px 20px rgba(0,0,0,0.1);
  flex: 1;
}

.card-item {
  margin-bottom: 20px;
}

/* IMPACT */
.impact {
  background: #eef3ee;
  padding: 40px 20px;
  text-align: center;
}

.impact-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  max-width: 1200px;
  margin: auto;
  gap: 20px;
}

.impact-item {
  padding: 20px;
  background: white;
  border-radius: 10px;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
}

.impact-item h3{
  font-size: 14px;
  margin-bottom: 5px;
}

.impact-item p{
  font-size: 12px;
}


.icon {
  font-size: 28px;
  color: #1b5e20;
  margin-bottom: 10px;
}

/* STATS */
.stats {
  background: #18A6C4;
  color: white;
  padding: 50px 20px;
  text-align: center;
}

.stats-container {
  display: flex;
  justify-content: center;
  gap: 60px;
}

.stat-box h2 {
  font-size: 40px;
}

/* PROGRAMS */
.programs {
  padding: 60px 20px;
  text-align: center;
  background: #f7f7f7;
}

.program-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 30px;
  max-width: 1000px;
  margin: auto;
}

.program-card {
  background: white;
  padding: 25px;
  border-radius: 10px;
}

/* PARTNERS */
.partners {
  padding: 60px 20px;
  text-align: center;
}

.partner-btn{
  display: inline-block;
  margin-top: 20px;
  background: #18A6C4;
  padding: 12px 25px;
  border-radius: 30px;
  text-decoration: none;
  font-weight: bold;
  transition: all 0.3s ease;
  color: white;
}

.partner-btn:hover{
  background: #18A6C4;
  transform: translateY(-2px);
  
}

/* FOOTER */
.footer {
  background: #18A6C4;
  color: white;
  padding:80px 20px;
  min-height: 200px;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  max-width: 1100px;
  margin: auto;
  gap: 40px;
  
}

.footer-col{
   flex: 1;
   text-decoration: none;
}

.footer-col p{
  margin: 10px 0;
  font-size: 18px;
  line-height: 1.6;
}

.footer-col ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.footer-col h4 {
  font-size: 18px;
  margin-bottom: 10px;
}

.footer-col a{
  color: white;
  text-decoration: none;
  list-style: none;
}

.footer-col a:hover{
  text-decoration: underline;
}

.footer-bottom {
  text-align: center;
  
  font-size: 25px;
  font-weight: 500;
  margin-top: 40px;
  padding-top: 15px;
}



/* ANIMATION */
.reveal {
  opacity: 0;
  transform: translateY(40px);
  transition: all 0.8s ease;
}

.reveal.active {
  opacity: 1;
  transform: translateY(0);
}

/* HAMBURGER (hidden on desktop) */
.menu-toggle {
  display: none;
  font-size: 28px;
  cursor: pointer;
}

/* ========================= */
/* 📱 MOBILE */
/* ========================= */
@media (max-width: 768px) {
    .impact-grid{
      grid-template-columns: repeat(2,1fr);
    }
  
  .menu-toggle {
    display: block;
  }

  .logo img {
    height: 45px;
  }
   

  @media (max-width: 768px) {

    .nav-links {
      background: white;              /* solid background */
      box-shadow: 0 6px 20px rgba(0,0,0,0.2);  /* shadow */
      z-index: 1000;  
                      /* stay above hero */
     position: absolute;
     top: 100px;
     left: 2px;
     width: 60px;
     flex-direction: column;
     align-items: flex-start;
     display: none;
     padding: 8px 0;
     border-radius: 0 0 12px 12px;
    
     gap: 0;
    }

    .nav-links {
      backdrop-filter: blur(8px);
    }

    .nav-links li {
      padding: 4px 0;
      border-bottom: 1px solid #eee;
      text-align: center;
      width: 100%;
    }
  
    .nav-links li a {
      color: #333;   
      font-size: 13px;   
      line-height: 1.2;             /* dark text */
    }
  
  }
  .nav-links {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 60px;
    right: 0;
    width: 100%;
    background: #f5f5f5;
    padding: 20px 0;
  }

  .nav-links.active {
    display: block;
  }

  .header {
    padding: 10px 20px;
  }

  .about-container {
    flex-direction: column;
    text-align: center;
  }

  .impact-grid {
    grid-template-columns: repeat(2, 1fr);
  }

  .stats-container {
    flex-direction: column;
    gap: 20px;
  }

  .program-grid {
    grid-template-columns: 1fr;
  }

  .footer-container {
    flex-direction: column;
    text-align: center;
    /* gap: 10px; */
  }
  
  .navbar {
    position: relative;
    z-index: 1000;
  }

  .hero-overlay {
    background: rgba(0, 0, 0, 0.6);   
  }


  .hero-overlay {
    padding: 20px;
    justify-content: center;
    text-align: center;
  }

  .hero-content h1 {
    font-size: 28px;
  }

  .hero-content p {
    font-size: 14px;
  }

  .hero-buttons {
    flex-direction: column;
    align-items: center;
  }
  
  .logo img {
    height: 60px;   /* adjust size */
    width: auto;
  }
  
  html{
    scroll-behavior: smooth;
  }


    /* PARTNER SECTION */
.partner-section {
  padding: 80px 20px;
  background: #eef3ee;
  text-align: center;
  
 
  
}

.partner-container {
  max-width: 1100px;
  margin: auto;
  display: flex;
  gap: 40px;
  align-items: center;
}

/* LEFT SIDE */
.partner-text {
  flex: 1;
}


.partner-text h2 {
  color: #1b5e20;
  font-size: 32px;
  margin-bottom: 15px;
}

.partner-text p {
  color: #333;
  line-height: 1.6;
  
}

/* RIGHT SIDE FORM */
.partner-form {
  flex: 1;
  background: white;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 5px 20px rgba(0,0,0,0.1);
  border: 2px solid #18A6C4;
}


.partner-form form {
  display: flex;
  flex-direction: column;
  gap: 15px;
}


.partner-form input::placeholder,
.partner-form textarea::placeholder {
  color: #888;
}

.partner-form input:focus,
.partner-form textarea:focus,
.partner-form select:focus {
  outline: none;
  border-color: #18A6C4;
}

.partner-form input,
.partner-form select,
.partner-form textarea {
  padding: 10px;
  border-radius: 5px;
  font-size: 14px;
  background: #f9f9f9;
  border: 1px solid #ccc;
  color: #333;
}

.partner-form button {
  background: #1b5e20;
  color: white;
  border: none;
  padding: 12px;
  border-radius: 25px;
  font-weight: bold;
  cursor: pointer;
 
}

.partner-form button:hover {
  background: #1590a8;
}

.partner-form form {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

/* Inputs */
.partner-form input,
.partner-form select {
  flex: 1;
  min-width: 150px;

  padding: 10px;
  background: #f9f9f9;
  border: 1px solid #ccc;
  border-radius: 5px;
}

/* Textarea full width */
.partner-form textarea {
  width: 100%;
  padding: 10px;
  background: #f9f9f9;
  border: 1px solid #ccc;
  border-radius: 5px;
}

/* Button */
.partner-form button {
  background: #18A6C4;
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 25px;
  cursor: pointer;
}





/* MOBILE */
@media (max-width: 768px) {
  .partner-container {
    flex-direction: column;
  }
}
}

/* ===== FORCE PARTNER FORM STYLE (FINAL FIX) ===== */

.partner-section {
  padding: 80px 20px;
  background: #eef3ee;
  text-align: center;
}

.partner-container {
  max-width: 900px;
  margin: 30px auto;
}

.partner-form {
  background: white;
  padding: 30px;
  border-radius: 10px;
  border: 2px solid #18A6C4;
  box-shadow: 0 5px 20px rgba(0,0,0,0.1);
}

/* FORM LAYOUT */
.partner-form form {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

/* INPUTS */
.partner-form input,
.partner-form select {
  flex: 1;
  min-width: 150px;
  padding: 10px;
  background: #f9f9f9;
  border: 1px solid #ccc;
  border-radius: 5px;
  color: #333;
}

/* TEXTAREA */
.partner-form textarea {
  width: 100%;
  padding: 10px;
  background: #f9f9f9;
  border: 1px solid #ccc;
  border-radius: 5px;
}

/* BUTTON */
.partner-form button {
  background: #18A6C4;
  color: white;
  border: none;
  padding: 12px 20px;
  border-radius: 25px;
  cursor: pointer;
  align-items: center;
}

html, body{
  overflow-x: hidden;
}

